@@ -187,7 +187,7 @@ stm8_reset_regparm (struct sym_link *ftype)
 static int
 stm8_reg_parm (sym_link *l, bool reentrant)
 {
-  bool is_regarg = stm8IsRegArg(_G.regparam.ftype, ++_G.regparam.n, 0);
+  bool is_regarg = stm8IsRegArg (_G.regparam.ftype, ++_G.regparam.n, 0);
 
   return (is_regarg ? _G.regparam.n : 0);
 }
