@@ -1,3 +1,13 @@
+2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* doc/sdccman.lyx:
+	  Improve mcs51 calling convention documentation.
+	* src/mcs51/gen.c,
+	  src/mcs51/gen.h,
+	  src/mcs51/main.c,
+	  src/mcs51/rtrack:
+	  Use aopArg, provide mcs51IsReturned and mcs51IsRegArg.
+
 2023-11-14 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/mcs51/gen.c,
